# cooragent

./: .cursorindexingignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  LOGGING_IMPROVEMENTS.md  Makefile  README.md  README_GENERATOR.md  README_homepage.md  README_zh.md  cli.py  create_real_icons.html  debug_cooragent.py  debug_test.py  debug_travel_coordinator.py  debug_travel_coordinator_report.json  demo.py  generator_cli.py  index.html  manifest.json  package.json  pre-commit  pyproject.toml  restart_with_clean_logs.sh  simple_test.py  start_generator.sh  start_homepage.sh  start_local_dev.sh  start_netlify_dev.sh  start_with_backend_logs.sh  stop_services.sh  sw.js  test.html  test_generator.py  test_simple_query.py  test_travel_api.py  test_travel_simple.py  (+5 more)
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml  config.yml
.specstory/history/: 2025-07-22_06-01Z-产品分析与多智能体代码生成.md  2025-07-24_06-23Z-提交代码到github.md  2025-07-24_12-08Z-分析代码实现一句话识别需求.md  2025-07-27_05-34Z-分析问题的解决方案.md  2025-08-03_06-00Z-提交代码到github.md  2025-08-05_05-24Z-旅游多智能体产品需求分析.md  2025-08-07_09-02Z-删除携程和大众点评的mcp组件.md  2025-08-08_02-21Z-多智能体产品发展规划讨论.md  2025-08-08_05-12Z-accessing-local-server-at-localhost.md  2025-08-08_08-26Z-提交代码到github.md
config/: global_functions.py  global_variables.py  mcp.json.example  workflow.json
docs/: 01产品分析一句话生成多智能体代码.md  02提示词工程分析.md  03Web一句话.md  04最小原型开发需求和技术方案.md  05最小原型代码实现0723.md  06一句话生成多智能体代码修改方案0723.md  07本地开发环境启动命令0724.md  08目前项目代码如何实现一句话识别需求0724.md  09执行过程日志说明.md  10详细日志记录修改0725.md  11大模型智慧在需求分析中的应用信息.md  12mcp组件配置方法.md  13Traffic_planner智能体代码存储分析说明.md  14生成智能体代码缺失文件清单.md  15生成智能体代码缺失组件清单.md  16生成智能体代码启动问题.md  16生成智能体调试问题.md  18-CURSOR_DEBUG_GUIDE.md  19Python调试部署和使用.md  20Git安全推送指南.md  22.store目录文件生成逻辑.md  23coordinatoragent使用功能及作用说明.md  24planneragent使用功能及作用说明.md  25publisher使用功能及作用说明.md  26agent_proxy说明.md  27agent_factory使用功能及作用说明.md  28生成智能体代码方案自我审查结果.md  29生成代码部署依赖检查修改.md  29生成智能体代码调整完成总结.md  30工具MCP相关代码遗漏问题.md  30生成智能体启动测试改进总结.md  31生成代码decorators.py缺失问题修复.md  32MCP航班服务器配置修复.md  33完整旅游MCP配置说明.md  33生成旅游智能体代码异常问题总结.md  34MCP配置修复完成总结.md  35GitHub版本MCP配置恢复.md  36旅游规划前端页面使用说明.md  3703旅游相关的MCP组件和工具03bygrok.md  3704旅游相关的MCP组件和工具03bygemi.md  (+34 more)
docs/生产环境部署/: 01部署说明及启动说明.md
generated_projects/cooragent_app_user_d0b3ff18_1753257895/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
icons/: generate_icons.html
scripts/: create_travel_agents.py
sh/: restart.sh  status.sh
src/: llm.py
src/api/: __init__.py  generator_api.py  generator_api0803bk.py
src/config/: agents.py  env.py
src/generator/: __init__.py  config_generator.py  cooragent_generator.py  template_renderer.py
src/interface/: agent.py  agent_types.py  mcp.py  mcp_types.py  serialize_types.py  serializer.py  travel_plan.py  workflow.py
src/llm/: agents.py  llm.py
src/manager/: __init__.py  agents.py  mcp.py  travel_agent_templates.py
src/mcp/: __init__.py  excel_agent.py  register.py  slack_agent.py
src/prompts/: __init__.py  agent_factory.md  agent_factory_planner.md  agent_polish.md  browser.md  coder.md  coordinator.md  file_manager.md  html_generator.md  planner.md  planner_polishment.md  publisher.md  reporter.md  researcher.md  template.py  travel_planner.md
src/service/: app.py  context.py  decorators.py  env.py  server.py  session.py  tool_tracker.py  websocket_manager.py
src/tools/: __init__.py  avatar_tool.py  bash_tool.py  browser.py  browser_decorators.py  crawl.py  file_management.py  gmail.py  office365.py  python_repl.py  real_mcp_client.py  search.py  slack.py  video.py  web_preview_tool.py  websocket_manager.py
src/utils/: __init__.py  chinese_names.py  content_process.py  file_cleaner.py  path_utils.py  travel_intelligence.py  travel_optimization.py
src/workflow/: __init__.py  agent_factory.py  cache.py  coor_task.py  dynamic.py  graph.py  manager.py  polish_task.py  process.py  template.py  travel_agent_proxy.py  travel_coordinator.py  travel_planner.py  travel_publisher.py
static/: travel_planner.html
tests/: test_app.py  test_travel_coordinator.py
tests/integration/: test_avatar.py  test_bash_tool.py  test_crawler.py  test_video_tool.py
(+37 files in other folders)
