[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cooragent"
version = "0.1.0"
authors = [
  { name="wangzheng", email="georgewang2011@163.com" },
]
description = "Cooragent project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain-community>=0.3.19",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.5",
    "readabilipy>=0.3.0",
    "python-dotenv>=1.0.1",
    "socksio>=1.0.0",
    "markdownify>=1.1.0",
    "browser-use>=0.1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "sse-starlette>=1.6.5",
    "pandas>=2.2.3",
    "numpy>=2.2.3",
    "yfinance>=0.2.54",
    "aiofiles>=24.1.0",
    "langchain-deepseek>=0.1.2",
    "matplotlib>=3.10.1",
    "python-docx>=1.1.2",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "mcp==1.9.2",
    "beeai-framework>=0.1.11",
    "openpyxl>=3.1.5",
    "dashscope>=1.22.2",
    "termcolor>=3.0.0",
    "langchain-mcp-adapters==0.1.4",
    "rich>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/build/
'''

[tool.ruff]
# Allow lines to be as long as 88.
line-length = 88


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    # "I",
    # flake8-logging-format
    "G",
]

ignore = [
    # star imports
    "F405", "F403",
    # lambda expression assignment
    "E731",
    # Loop control variable not used within loop body
    "B007",
    # f-string format
    "UP032",
    # Can remove once 3.10+ is the minimum Python version
    "UP007",
]

[tool.mypy]
plugins = ['pydantic.mypy']
ignore_missing_imports = true
check_untyped_defs = true
follow_imports = "silent"

[tool.isort]
skip_glob = [
    "config/*",
    "src/prompt/*",
]
use_parentheses = true
skip_gitignore = true